fix: card css text-align

--- a/src/pages/components/Cards/Card.css
+++ b/src/pages/components/Cards/Card.css
@@ -29,6 +29,7 @@
 .card p {
   margin-top: 12px;
   font-size: 1.25rem;
+  text-align: center;
 }
 
 @media (max-width: 1200px) {
